fix: update goods_api
